@@ -1,3 +1,9 @@
+2009-08-03  higepon  <higepon@users.sourceforge.jp>
+
+	* OSCompat.cpp (nativeTranscoder): Change the error policy to RAISE_ERROR. (Issue 80).
+
+	* UTF8Codec.cpp : Fixed short cut bug.
+
 2009-08-02  OKUMURA Yuki <mjt@cltn.org>
 	
         * configure.ac : implies port specific options (gc-7.1 win32 threads /
